--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,8 +16,11 @@ LobbyServer: lobby
 # Would you use MySQL? Default is false [need MySQLAPI] https://github.com/TrAxMC/MySQLAPI/releases/tag/1.0.2
 MySQL: false
 
-# Default ist 100
-Win: 100
+# Default ist 400
+WinReward: 400
+
+# Default ist 50
+LoseReward: 50
 
 # ItemBox Default is GOLD_BLOCK
 ItemBlock: GOLD_BLOCK
