--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,20 +1,31 @@
+# need Vault
+
+# SpecialItems [change in this Section nothing]
+SpecialItems:
+  Bomb: true
+  Banana: true
+  Thunder: true
+  Mushroom: true
+  Bullet-Bill: true
+  Star: true
+
 Prefix: '[&aMine&bKart&6] &c>> &f'
 
 # MySQL Saves Table Default is minekart_playerstats [need MySQLAPI]
 DatabaseName: 'minekart_playerstats'
 
+# Would you use MySQL? Default is false [need MySQLAPI] https://github.com/TrAxMC/MySQLAPI/releases/tag/1.0.2
+MySQL: false
+
 # Default is false
 BungeeCord: false
 
-# ==CloudNet Disabled!==
+# *==* CloudNet Disabled! [Not Working] *==*
 # CloudNet: false
 # CloudNetLobbyGroup: Lobby
 
 # Default is lobby
 LobbyServer: lobby
-
-# Would you use MySQL? Default is false [need MySQLAPI] https://github.com/TrAxMC/MySQLAPI/releases/tag/1.0.2
-MySQL: false
 
 # Default ist 400
 WinReward: 400
