--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -5,13 +5,13 @@ DatabaseName: 'minekart_playerstats'
 
 # Default is false
 BungeeCord: false
+BungeeCordLobby: Lobby-1
 
-# CloudNet: false
+CloudNet: false
 
-# CloudNetLobbyGroup: Lobby
+CloudNetLobbyGroup: Lobby
 
 # Default is lobby
-LobbyServer: lobby
 
 # Would you use MySQL? Default is false [need MySQLAPI] https://github.com/TrAxMC/MySQLAPI/releases/tag/1.0.2
 MySQL: false
